force-app/main/default/objects/BaselineMeasureDetail__c/BaselineMeasureDetail__c.object-meta.xml
<CustomObject>
    <description>Headline number for each measure included in the phase: EWI, CWI, Underfloor insulation, Loft insulation, Draught proofing, ASHP, GSHP, SGL, Storage heaters*(TBC), Solar PV, Solar Thermal, Windows, Ventilation, Other</description>
    <label>Baseline Measure Detail</label>
    <nameField>
        <displayFormat>MSD-{000000}</displayFormat>
        <label>Measure Detail Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baseline Measure Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>