force-app/main/default/objects/BaselineMeasureDetail__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Baseline Measure Detail (Baseline)</relationshipLabel>
    <relationshipName>Baseline_Measure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>