force-app/main/default/objects/BaselineMeasureDetail__c/fields/Cost_to_install_measure__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_install_measure__c</fullName>
    <inlineHelpText>The figures entered into the &apos;Cost to install measure&apos; column should be best estimate averages, and the costs listed for this question are for information only, rather than forming part of the detailed baseline for this phase of the project.</inlineHelpText>
    <label>Cost to install measure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>