force-app/main/default/objects/BaselineMeasureDetail__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Baseline Measure Detail</relationshipLabel>
    <relationshipName>Baseline_Measure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>