force-app/main/default/objects/BaselineMeasureDetail__c/fields/Funding_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Funding_Baseline__c</fullName>
    <label>Funding Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Baseline Measure Detail (Funding Baseline)</relationshipLabel>
    <relationshipName>Baseline_Measure_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>