force-app/main/default/objects/BaselineMeasureDetail__c/fields/Measure_KPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Measure_KPI_Number__c</fullName>
    <description>KPI that has a numerical value</description>
    <label>Measure KPI (Number)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>