force-app/main/default/objects/BaselineMeasureDetail__c/fields/Measure_KPI_Text__c.field-meta.xml
<CustomField>
    <fullName>Measure_KPI_Text__c</fullName>
    <description>KPI that has a text value</description>
    <label>Measure KPI (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>