force-app/main/default/objects/BaselineMeasureDetail__c/fields/Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type__c</fullName>
    <description>Depreciated - Predefined list of measure types</description>
    <label>Measure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Measure_Type</valueSetName>
    </valueSet>
</CustomField>