force-app/main/default/objects/BaselineMeasureDetail__c/fields/Measure_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Name__c</fullName>
    <formula>Property_Measure_Type__r.Name</formula>
    <label>Measure Type Name</label>
    <type>Text</type>
</CustomField>