force-app/main/default/objects/BaselineMeasureDetail__c/fields/Property_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Measure Type</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Baseline Measure Detail</relationshipLabel>
    <relationshipName>Property_Measure_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>