force-app/main/default/objects/BaselineMeasureDetail__c/recordTypes/SHF_Strategic_Partner.recordType-meta.xml
<RecordType>
    <fullName>SHF_Strategic_Partner</fullName>
    <active>true</active>
    <label>SHF Strategic Partner</label>
</RecordType>